<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".ui.fragments.CrearEventoFragment">

    <LinearLayout
        android:id="@+id/llEncabezadoEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTituloEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/titulo"
            android:textColor="@color/blanco"
            android:textSize="21sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTodoEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llCamposEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rgTipoEventoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbCitaEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cita"
                    android:textSize="4pt" />

                <RadioButton
                    android:id="@+id/rbJuntaEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/junta"
                    android:textSize="4pt" />

                <RadioButton
                    android:id="@+id/rbExamenEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/examen"
                    android:textSize="4pt" />

                <RadioButton
                    android:id="@+id/rbOtroEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/otro"
                    android:textSize="4pt" />

                <RadioButton
                    android:id="@+id/rbEntregaProyectoEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/entrega_de_proyecto"
                    android:textSize="4pt" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/llFechaEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/fecha"
                    android:textSize="6pt" />

                <EditText
                    android:id="@+id/edtFechaEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="3"
                    android:autofillHints=""
                    android:clickable="false"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/hint_fecha"
                    android:inputType="none"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llHoraEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/hora"
                    android:textSize="6pt" />

                <EditText
                    android:id="@+id/edtHoraEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="3"
                    android:autofillHints=""
                    android:clickable="false"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/hint_hora"
                    android:inputType="none"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llDescripcionEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/descripcion"
                    android:textSize="6pt" />

                <EditText
                    android:id="@+id/edtDescripcionEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:inputType="text"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llStatusEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvStatusEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/estatus"
                    android:textSize="6pt" />

                <Spinner
                    android:id="@+id/spStatusEdit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="3" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/actualizar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/cancelar" />
    </LinearLayout>
</LinearLayout>