<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCategoriaRv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_evento"
                android:textColor="@color/negro"
                android:textSize="11pt" />

            <TextView
                android:id="@+id/tvDescripcionRv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textColor="@color/negro" />

            <TextView
                android:id="@+id/tvFechaRv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textColor="@color/negro" />

            <TextView
                android:id="@+id/tvHoraRv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                android:textColor="@color/negro" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>